// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BusyButton > renders a primary outlined buton 1`] = `
<DocumentFragment>
  <button
    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3 kfp-busy-button"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    <span>
      test busy button
    </span>
  </button>
</DocumentFragment>
`;

exports[`BusyButton > renders disabled 1`] = `
<DocumentFragment>
  <button
    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3 kfp-busy-button"
    data-disabled=""
    data-slot="button"
    disabled=""
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-question-mark lucide-help-circle lucide-circle-help"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      test busy button
    </span>
  </button>
</DocumentFragment>
`;

exports[`BusyButton > renders with a title and icon 1`] = `
<DocumentFragment>
  <button
    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3 kfp-busy-button"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-question-mark lucide-help-circle lucide-circle-help"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      test busy button
    </span>
  </button>
</DocumentFragment>
`;

exports[`BusyButton > renders with a title and icon, and busy 1`] = `
<DocumentFragment>
  <button
    aria-busy="true"
    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3 kfp-busy-button"
    data-disabled=""
    data-slot="button"
    disabled=""
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-question-mark lucide-help-circle lucide-circle-help"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      test busy button
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle lucide-loader-2 kfp-atom-spinner"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`BusyButton > renders with just a title 1`] = `
<DocumentFragment>
  <button
    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3 kfp-busy-button"
    data-slot="button"
    tabindex="0"
    type="button"
  >
    <span>
      test busy button
    </span>
  </button>
</DocumentFragment>
`;
